--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaals",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "ABOSS Design System",
   "repository": {
     "type": "git",
@@ -50,6 +50,7 @@
     "styled-components": "^4.2.0"
   },
   "dependencies": {
+    "feather-icons-react": "^0.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6"
   }
